--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "pchiwan@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "@now/node": "^1.3.0"
+    "@now/node": "^1.3.0",
+    "swagger-ui-dist": "^3.25.0"
   },
   "dependencies": {
-    "now": "^16.7.0"
+    "now": "16.7.0"
   }
 }
