--- a/package.json
+++ b/package.json
@@ -4,15 +4,12 @@
   "description": "A galaxy exploration API implemented using Zeit Now's serverless functions",
   "main": "src/api/index.js",
   "scripts": {
-    "start": "now dev"
+    "start": "vercel dev"
   },
   "author": "pchiwan@gmail.com",
   "license": "ISC",
   "devDependencies": {
-    "@now/node": "^1.3.0",
-    "swagger-ui-dist": "^3.25.0"
-  },
-  "dependencies": {
-    "now": "16.7.0"
+    "swagger-ui-dist": "^3.25.0",
+    "vercel": "^21.3.3"
   }
 }
